src/objects/CBCategory__c.object
<CustomObject>
    <fields>
        <fullName>Allocation__c</fullName>
        <label>Allocation</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CBBudgetYear__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Budget Year</label>
        <referenceTo>cb5__CBBudgetYear__c</referenceTo>
        <relationshipLabel>CB Categories</relationshipLabel>
        <relationshipName>CB_Categories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBDivision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Division</label>
        <referenceTo>cb5__CBDivision__c</referenceTo>
        <relationshipLabel>CB Categories</relationshipLabel>
        <relationshipName>CB_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBEmployee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Employee</label>
        <referenceTo>cb5__CBVariable5__c</referenceTo>
        <relationshipLabel>CB Categories</relationshipLabel>
        <relationshipName>CBCategories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Formula__c</fullName>
        <label>Formula</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NFL1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NFL1</label>
        <referenceTo>cb5__CBNonFinancialLibrary__c</referenceTo>
        <relationshipLabel>CB Categories</relationshipLabel>
        <relationshipName>CB_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NFL2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NFL2</label>
        <referenceTo>cb5__CBNonFinancialLibrary__c</referenceTo>
        <relationshipLabel>CB Categories (NFL2)</relationshipLabel>
        <relationshipName>CB_Categories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NFL3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NFL3</label>
        <referenceTo>cb5__CBNonFinancialLibrary__c</referenceTo>
        <relationshipLabel>CB Categories (NFL3)</relationshipLabel>
        <relationshipName>CB_Categories2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NFLResult__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>NFL Result</label>
        <referenceTo>cb5__CBNonFinancialLibrary__c</referenceTo>
        <relationshipLabel>CB Categories (NFL Result)</relationshipLabel>
        <relationshipName>Categories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Category</label>
        <referenceTo>CBCategory__c</referenceTo>
        <relationshipLabel>CB Categories</relationshipLabel>
        <relationshipName>CB_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <defaultValue>&apos;Salary&apos;</defaultValue>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salary</fullName>
                </value>
                <value>
                    <fullName>Bonus</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>CB Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CBEmployee__c</columns>
        <columns>Type__c</columns>
        <columns>CBBudgetYear__c</columns>
        <columns>CBDivision__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CBCategory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>